--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <button type="button" onclick=" xen.config.capsuleAlgo.bankSelect({itemIndex:2, transition:'curve'})">SELECT</button>
     </div>
  -->        
+ HELLO
         <div id="canvasHolder">
             <canvas id="canvas" width="800" height="600"></canvas>
         </div>
