--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>MODULE</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <script src="phonegap.js"></script>
         <script>
             var libs = "/DEV/xen-framework";
             var xenPath = "/DEV/xen-framework";
