--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <script src="phonegap.js"></script>
         <script>
-            var libs = "/DEV/xen-framework";
-            var xenPath = "/DEV/xen-framework";
+            var libs = "libs/xen-framework";
+            var xenPath = "libs/xen-framework";
             var monitoring = true;
         </script>
 <!-- MARCHE PAS (pb avec require) -->
